--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ https://templatemo.com/tm-531-reflux
               <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Reflux Me</h4>
-              <span>Web Designer</span>
+              <h4>Long Makara</h4>
+              <span>Cyber Security</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
@@ -85,8 +85,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              >This is a Bootstrap v4.2.1 CSS Template for you. Edit and use
-              this layout for your site. Updated on 21 May 2019 for repeated main menu HTML code.</span
+              >Senior-level expert with 4 years of experience delivering on-site network management and support services across diverse industries. Presents programs and solutions to drive growth. Provides supplemental and total management support for IT systems, including establishing and maintaining networks and servers. Strong aptitude for identifying new technologies and solutions to support client needs. Developing and implementing security solutions in fast-paced environments. Skilled in Identifying Issue and Problem Resolution with proven history of delivering exceptional risk management support.</span
             >
           </div>
           <div class="left-image-post">
@@ -98,13 +97,17 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Cybersecurity Researcher</h4>
                   <p>
-                    Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                    sed. Mauris viverra, erat non sagittis gravida, elit dui
-                    mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                    tincidunt quam vitae neque pharetra dignissim eget ut
-                    libero.
+• Monitored use of data files and regulated access to protect secure information.<br>
+• Researched and developed new computer forensic tools.<br>
+• Recommend improvements in security systems and procedures.<br>
+• Monitored computer virus reports determining when to update virus protection systems.<br>
+• Monitored social media and online sources for industry trends.<br>
+• Research on what are the domain of Cyber Security<br>
+• Create the Syllabus for Cyber Security to train to team<br>
+• Shelf leaning on the topic of Ethical hacking (CEH) and Network Defense (CND)<br>
+• Conduct awareness training on Cyber Security<br>
                   </p>
                   <div class="white-button">
                     <a href="#">Read More</a>
@@ -117,13 +120,16 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
-                  <h4>Sed sagittis rhoncus velit</h4>
+                  <h4>SENIOR NETWORK EGINEER</h4>
                   <p>
-                    Pellentesque habitant morbi tristique senectus et netus et
-                    malesuada fames ac turpis egestas. Vestibulum fermentum
-                    eleifend nibh, vitae sodales elit finibus pretium.
-                    Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                    semper.
+• Installed and configured network security solutions such as VPNs, Firewalls and intrusion detection and mitigation tools.<br>
+• Analyzed existing network and application architectures, presenting findings on possible enhancements and improvements to senior decision makers.<br>
+• Managed purchasing and installation of networking equipment such as core routers and switches.<br>
+• Improved network operation by incorporating new technologies into existing designs.<br>
+• Led planning and technical design activities for routine operations and special projects.<br>
+• Established and monitored key performance metrics to verify consistent compliance with important networking standards.<br>
+• Configured, tested and maintained LAN/WAN components and connections.<br>
+• Recommended network security standards and upgrades to management.<br>
                   </p>
                   <div class="white-button">
                     <a href="#">Read More</a>
